test/tasty/neg/src-2/IllegalTraitParams_fail.scala
package tastytest

class Illegal extends TraitParams.Foo("?")
